--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,29 @@ hs_err_pid*
 
 .idea/
 .mvn/
+
+target/
+!.mvn/wrapper/maven-wrapper.jar
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+
+### IntelliJ IDEA ###
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+
+tacocloud-ui/node_modules/
