--- a/tacocloud-mpa/pom.xml
+++ b/tacocloud-mpa/pom.xml
@@ -90,6 +90,10 @@
             <artifactId>spring-hateoas</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.plugin</groupId>
+            <artifactId>spring-plugin-core</artifactId>
+        </dependency>
+        <dependency>
             <groupId>ssau.kuznetsov</groupId>
             <artifactId>taco-cloud</artifactId>
             <version>0.0.1-SNAPSHOT</version>
