--- a/tacocloud-mpa/pom.xml
+++ b/tacocloud-mpa/pom.xml
@@ -107,6 +107,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-artemis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>javax.jms</groupId>
+            <artifactId>javax.jms-api</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.security</groupId>
