--- a/tacocloud-mpa/src/main/resources/application.yml
+++ b/tacocloud-mpa/src/main/resources/application.yml
@@ -10,3 +10,11 @@ spring:
   jms:
     template:
       default-destination: tacocloud.order.queue
+
+  artemis:
+    host: localhost
+    port: 61616
+    user: tacoweb
+    password: letm31n
+    embedded:
+      enabled: false
