def Kafka props

--- a/tacocloud-mpa/src/main/resources/application.yml
+++ b/tacocloud-mpa/src/main/resources/application.yml
@@ -24,3 +24,7 @@ spring:
       receive-timeout: 30000
     exchange: tacocloud.orders
     routing-key: kitchens.central
+
+  kafka:
+    template:
+    default-topic: tacocloud.orders.topic
