--- a/tacocloud-mpa/src/main/resources/application.yml
+++ b/tacocloud-mpa/src/main/resources/application.yml
@@ -2,6 +2,14 @@ taco:
   orders:
     pageSize: 10
 
+tacocloud:
+  email:
+  host: imap.tacocloud.com
+  mailbox: INBOX
+  username: taco-in-flow
+  password: 1L0v3T4c0s
+  poll-rate: 10000
+
 spring:
   data:
     rest:
