--- a/tacocloud-mpa/pom.xml
+++ b/tacocloud-mpa/pom.xml
@@ -127,6 +127,10 @@
             <groupId>org.springframework.integration</groupId>
             <artifactId>spring-integration-file</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.integration</groupId>
+            <artifactId>spring-integration-file</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.security</groupId>
