--- a/tacocloud-mpa/src/main/resources/application.yml
+++ b/tacocloud-mpa/src/main/resources/application.yml
@@ -9,6 +9,8 @@ tacocloud:
   username: taco-in-flow
   password: 1L0v3T4c0s
   poll-rate: 10000
+  api:
+    url: http://api.tacocloud.com
 
 spring:
   main:
