--- a/tacocloud-mpa/pom.xml
+++ b/tacocloud-mpa/pom.xml
@@ -125,6 +125,7 @@
         <dependency>
             <groupId>javax.mail</groupId>
             <artifactId>mail</artifactId>
+            <version>1.4.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
