--- a/tacocloud-api/pom.xml
+++ b/tacocloud-api/pom.xml
@@ -1,72 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-	<modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-	<packaging>jar</packaging>
-	<artifactId>tacocloud-domain</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <artifactId>tacocloud-domain</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
 
-	<parent>
-		<groupId>ssau.kuznetsov</groupId>
-		<artifactId>tacocloud</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-	</parent>
+    <parent>
+        <groupId>ssau.kuznetsov</groupId>
+        <artifactId>tacocloud</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </parent>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.8</java.version>
-	</properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>1.8</java.version>
+    </properties>
 
-	<dependencies>
-		<!-- TacoCloud dependencies -->
-		<dependency>
-			<groupId>ssau.kuznetsov</groupId>
-			<artifactId>tacocloud-data</artifactId>
-			<version>${tacocloud.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>ssau.kuznetsov</groupId>
-			<artifactId>tacocloud-domain</artifactId>
-			<version>${tacocloud.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>ssau.kuznetsov</groupId>
-			<artifactId>tacocloud-security</artifactId>
-			<version>${tacocloud.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>ssau.kuznetsov</groupId>
-			<artifactId>tacocloud-messaging-kafka</artifactId>
-			<version>${tacocloud.version}</version>
-		</dependency>
+    <dependencies>
+        <!-- TacoCloud dependencies -->
+        <dependency>
+            <groupId>ssau.kuznetsov</groupId>
+            <artifactId>tacocloud-data</artifactId>
+            <version>${tacocloud.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ssau.kuznetsov</groupId>
+            <artifactId>tacocloud-domain</artifactId>
+            <version>${tacocloud.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ssau.kuznetsov</groupId>
+            <artifactId>tacocloud-security</artifactId>
+            <version>${tacocloud.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ssau.kuznetsov</groupId>
+            <artifactId>tacocloud-messaging-kafka</artifactId>
+            <version>${tacocloud.version}</version>
+        </dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-rest</artifactId>
-		</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-rest</artifactId>
+        </dependency>
 
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<scope>provided</scope>
-		</dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-artemis</artifactId>
-		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-artemis</artifactId>
+        </dependency>
+    </dependencies>
 </project>
