--- a/tacocloud-app/pom.xml
+++ b/tacocloud-app/pom.xml
@@ -1,85 +1,85 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-	<modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-	<packaging>jar</packaging>
-	<artifactId>tacocloud-app</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <artifactId>tacocloud-app</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
 
-	<parent>
-		<groupId>ssau.kuznetsov</groupId>
-		<artifactId>tacocloud</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-	</parent>
+    <parent>
+        <groupId>ssau.kuznetsov</groupId>
+        <artifactId>tacocloud</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </parent>
 
-	<dependencies>
-		<dependency>
-			<groupId>ssau.kuznetsov</groupId>
-			<artifactId>tacocloud-data</artifactId>
-			<version>${tacocloud.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>ssau.kuznetsov</groupId>
-			<artifactId>tacocloud-domain</artifactId>
-			<version>${tacocloud.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>ssau.kuznetsov</groupId>
-			<artifactId>tacocloud-security</artifactId>
-			<version>${tacocloud.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>ssau.kuznetsov</groupId>
-			<artifactId>tacocloud-api</artifactId>
-			<version>${tacocloud.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>ssau.kuznetsov</groupId>
-			<artifactId>tacocloud-ui</artifactId>
-			<version>${tacocloud.version}</version>
-		</dependency>
+    <dependencies>
+        <dependency>
+            <groupId>ssau.kuznetsov</groupId>
+            <artifactId>tacocloud-data</artifactId>
+            <version>${tacocloud.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ssau.kuznetsov</groupId>
+            <artifactId>tacocloud-domain</artifactId>
+            <version>${tacocloud.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ssau.kuznetsov</groupId>
+            <artifactId>tacocloud-security</artifactId>
+            <version>${tacocloud.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ssau.kuznetsov</groupId>
+            <artifactId>tacocloud-api</artifactId>
+            <version>${tacocloud.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ssau.kuznetsov</groupId>
+            <artifactId>tacocloud-ui</artifactId>
+            <version>${tacocloud.version}</version>
+        </dependency>
 
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
-		</dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>selenium-java</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>htmlunit-driver</artifactId>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>htmlunit-driver</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
