--- a/tacocloud-kitchen/pom.xml
+++ b/tacocloud-kitchen/pom.xml
@@ -59,6 +59,10 @@
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-amqp</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
