--- a/tacocloud-api/pom.xml
+++ b/tacocloud-api/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <packaging>jar</packaging>
-    <artifactId>tacocloud-domain</artifactId>
+    <artifactId>tacocloud-api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
     <parent>
